// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tournament actions should create action to fetch leader 1`] = `
Object {
  "@@redux-api-middleware/RSAA": Object {
    "endpoint": "https://tournament-api-87.herokuapp.com/leaderboard",
    "method": "GET",
    "types": Array [
      "GET_TOURNAMENT_LEADERS_REQUEST",
      "GET_TOURNAMENT_LEADERS_SUCCESS",
      "GET_TOURNAMENT_LEADERS_FAILURE",
    ],
  },
}
`;

exports[`Tournament actions should create action to fetch prizes 1`] = `
Object {
  "@@redux-api-middleware/RSAA": Object {
    "endpoint": "https://tournament-api-87.herokuapp.com/prizes",
    "method": "GET",
    "types": Array [
      "GET_TOURNAMENT_PRIZES_REQUEST",
      "GET_TOURNAMENT_PRIZES_SUCCESS",
      "GET_TOURNAMENT_PRIZES_FAILURE",
    ],
  },
}
`;
